manifest/service.yaml
# loadbalancer type example

# apiVersion: v1
# kind: Service
# metadata:
#   name: hello-svc
# spec:
#   type: LoadBalancer
#   selector:
#     app: hello
#   ports:
#     - name: http
#       protocol: TCP
#       port: 4200 # host port
#       targetPort: 8080 # container port


apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    app: hello
  ports:
    - name: http
      protocol: TCP
      port: 4200 # host port
      targetPort: 8080 # container port
